:lipstick: Fix response padding on mobile device

--- a/src/pages/thanks/Thanks.module.css
+++ b/src/pages/thanks/Thanks.module.css
@@ -3,7 +3,10 @@
     flex-1
     flex-col
     items-center
-    justify-center;
+    justify-center
+    text-center
+    px-5
+    md:px-0;
 }
 
 .wrapper {
@@ -23,8 +26,7 @@
   @apply mt-5
     text-2xl
     font-medium
-    sm:max-w-md
-    text-center;
+    sm:max-w-md;
 }
 
 .info {
